--- a/TestDataGenerator/MainWindow.xaml
+++ b/TestDataGenerator/MainWindow.xaml
@@ -1,14 +1,17 @@
-﻿<Controls:MetroWindow x:Class="TestDataGenerator.MainWindow"
+﻿<controls:MetroWindow x:Class="TestDataGenerator.MainWindow"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                      xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro" Icon="metro.ico"
-                      Title="Test Data Generator" Height="350" Width="525" Style="{DynamicResource VSWindowStyleKey}">
+                      xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro" Icon="metro.ico"
+                      Title="Test Data Generator" Height="350" Width="525">
+    <controls:MetroWindow.Style>
+        <DynamicResource ResourceKey="VSWindowStyleKey" />
+    </controls:MetroWindow.Style>
     <Grid>
         <Label Content="Lenght:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" />
         <TextBox Name="TestDataLength" TextWrapping="Wrap" Margin="100,13,10,0" Height="23" VerticalAlignment="Top"
-                 TextChanged="TestDataLengthTextChanged" />
+                 TextChanged="TestDataLengthTextChanged" KeyDown="TestDataLengthOnKeyDown"/>
         <Label Content="Data Type:" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" />
-        <ComboBox Name="DataType" Margin="100,44,10,0" Height="23" VerticalAlignment="Top"
+        <ComboBox Name="DataType" Margin="100,44,10,0" Height="23" VerticalAlignment="Top" KeyDown="DataTypeOnKeyDown"
                   SelectionChanged="DataTypeSelectionChanged">
             <ComboBoxItem Content="Letters" />
             <ComboBoxItem Content="Numbers" />
@@ -27,4 +30,4 @@
         <TextBox Name="Output" TextWrapping="Wrap" Margin="100,125,10,10" IsReadOnly="True"
                  VerticalScrollBarVisibility="Auto" />
     </Grid>
-</Controls:MetroWindow>
+</controls:MetroWindow>
