--- a/TestDataGenerator/Style/AppTreeStyle.xaml
+++ b/TestDataGenerator/Style/AppTreeStyle.xaml
@@ -1,4 +1,5 @@
-﻿<ResourceDictionary x:Class="Selen.Wpf.SystemStyles.AppTreeStyles"
+﻿<!-- ReSharper disable Xaml.MissingGridIndex -->
+<ResourceDictionary x:Class="Selen.Wpf.SystemStyles.AppTreeStyles"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -109,7 +110,9 @@
                     </TransformGroup>
                 </Path.RenderTransform>
             </Path>
+
             <Path x:Name="CollapseIcon" Data="M17.25,0.5L17.25,17.25L0.5,17.25z" Height="6" HorizontalAlignment="Center" VerticalAlignment="Center" Width="6" Opacity="0" Stretch="Fill" Stroke="#FF262626" StrokeThickness="0.5" Visibility="Collapsed">
+
                 <Path.Fill>
                     <SolidColorBrush x:Name="IconColor" Color="{StaticResource IconColor}" />
                 </Path.Fill>
@@ -120,7 +123,9 @@
                 </Rectangle.Stroke>
             </Rectangle>
             <ContentPresenter x:Name="Content" Margin="6,5.5,4,4" IsHitTestVisible="true" Grid.Column="1" Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}" Visibility="Collapsed" />
+
             <Rectangle x:Name="DisabledBox" Height="13" VerticalAlignment="Center" Width="13" Opacity="0" Fill="{StaticResource DisabledBrush}" Stroke="{StaticResource DisabledBrush}" StrokeThickness=".75" RadiusX="1" RadiusY="1" Visibility="Collapsed" />
+
             <Rectangle Grid.Column="1" Fill="#00FFFFFF" />
         </Grid>
         <ControlTemplate.Triggers>
@@ -147,7 +152,9 @@
                                          Grid.ColumnSpan="2" ClickMode="Press" IsChecked="{Binding IsSelected, Mode=TwoWay}" />
                             <Border Name="border" Grid.ColumnSpan="2" IsHitTestVisible="False" BorderThickness="1"
                                     Background="{StaticResource BackgroundNormal}" BorderBrush="{StaticResource BorderBrushNormal}" />
+                            <!-- ReSharper disable Xaml.IndexOutOfGridDefinition -->
                             <Grid Grid.ColumnSpan="2" Grid.Column="1" Margin="5 0 5 0">
+                                <!-- ReSharper restore Xaml.IndexOutOfGridDefinition -->
                                 <ContentPresenter x:Name="PART_Header" ContentSource="Header" ContentTemplate="{TemplateBinding HeaderTemplate}"
                                                   TextElement.Foreground="{StaticResource Foreground}" IsHitTestVisible="False" HorizontalAlignment="Left" VerticalAlignment="Center" />
                             </Grid>
@@ -190,7 +197,7 @@
                                 <RowDefinition Height="Auto" />
                             </Grid.RowDefinitions>
                             <Grid x:Name="measureGrid" />
-                            <ScrollBar x:Name="PART_VerticalScrollBar" Visibility="Visible" IsTabStop="False" Orientation="Vertical" ViewportSize="{TemplateBinding ViewportHeight}" Maximum="{TemplateBinding ScrollableHeight}" Minimum="0" Value="{TemplateBinding VerticalOffset}" IsEnabled="True" Style="{StaticResource MenuScrollBar}" HorizontalAlignment="Stretch" Width="{Binding ActualWidth, ElementName=measureGrid}" />
+                            <ScrollBar x:Name="PART_VerticalScrollBar" Visibility="Visible" Orientation="Vertical" ViewportSize="{TemplateBinding ViewportHeight}" Maximum="{TemplateBinding ScrollableHeight}" Minimum="0" Value="{TemplateBinding VerticalOffset}" IsEnabled="True" Style="{StaticResource MenuScrollBar}" HorizontalAlignment="Stretch" Width="{Binding ActualWidth, ElementName=measureGrid}" />
                             <ScrollContentPresenter x:Name="PART_ScrollContentPresenter" Cursor="{TemplateBinding Cursor}" ContentTemplate="{TemplateBinding ContentTemplate}" Margin="0,18" VerticalAlignment="Top" />
                         </Grid>
                     </Border>
@@ -207,7 +214,8 @@
                 <ControlTemplate TargetType="{x:Type TreeView}">
                     <Grid x:Name="Root">
                         <Grid>
-                            <ScrollViewer x:Name="scrollViewer" Style="{StaticResource MenuScrollViewer}" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled">
+                            <ScrollViewer x:Name="scrollViewer" Style="{StaticResource MenuScrollViewer}"
+                                          HorizontalScrollBarVisibility="Disabled">
                                 <ItemsPresenter />
                             </ScrollViewer>
                         </Grid>
@@ -237,3 +245,4 @@
         </Grid>
     </DataTemplate>
 </ResourceDictionary>
+<!-- ReSharper restore Xaml.MissingGridIndex -->
