--- a/TestDataGenerator/MainWindow.xaml
+++ b/TestDataGenerator/MainWindow.xaml
@@ -2,14 +2,12 @@
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro" Icon="metro.ico"
-                      Title="Test Data Generator" Height="350" Width="525" Style="{DynamicResource VSWindowStyleKey}">
+                      Title="Test Data Generator" Height="350" Width="525" EnableDWMDropShadow="True"
+                      GlowBrush="{DynamicResource AccentColorBrush}" ResizeMode="NoResize">
     <Grid>
-        <Label Content="Lenght, Count:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" />
-        <TextBox Name="TestDataLength" TextWrapping="Wrap" Margin="100,13,10,0" Height="23" VerticalAlignment="Top"
-                 TextChanged="TestDataLengthTextChanged" KeyDown="TestDataLengthOnKeyDown" />
-        <Label Content="Data Type:" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" />
-        <ComboBox Name="DataType" Margin="100,44,10,0" Height="23" VerticalAlignment="Top" KeyDown="DataTypeOnKeyDown"
-                  SelectionChanged="DataTypeSelectionChanged">
+        <!--Data Controls (TextBoxes, ComboBoxes...)-->
+        <controls:NumericUpDown Name="TestDataLength" Margin="100,10,10,0" Height="23" VerticalAlignment="Top" KeyDown="TestDataLengthOnKeyDown" Minimum="1" />
+        <ComboBox Name="DataType" Margin="100,41,10,0" Height="23" VerticalAlignment="Top" KeyDown="DataTypeOnKeyDown">
             <ComboBoxItem Content="Letters" />
             <ComboBoxItem Content="Numbers" />
             <ComboBoxItem Content="Capital Letters" />
@@ -21,14 +19,17 @@
             <ComboBoxItem Content="Guids (braces)" />
             <ComboBoxItem Content="Guids (parentheses)" />
         </ComboBox>
-        <CheckBox Content="Unicode" HorizontalAlignment="Left" Margin="100,72,0,0" VerticalAlignment="Top"
-                  IsEnabled="False" Visibility="Hidden" />
-        <Button x:Name="Generator" Content="Generate" Margin="0,95,90,0" Height="20" VerticalAlignment="Top"
-        	HorizontalAlignment="Right" Width="75" Click="GenerateOutputOnClick" />
-        <Button Name="CopyToClipboard" Content="Clipboard" Margin="0,95,10,0" Height="20" VerticalAlignment="Top"
-                HorizontalAlignment="Right" Width="75" Click="CopyToClipboardOnClick" />
-        <Label Content="Output:" HorizontalAlignment="Left" Margin="10,121,0,0" VerticalAlignment="Top" />
-        <TextBox Name="Output" TextWrapping="Wrap" Margin="100,125,10,10" IsReadOnly="True"
+        <TextBox Name="Output" TextWrapping="Wrap" Margin="100,106,10,10" IsReadOnly="True"
                  VerticalScrollBarVisibility="Auto" />
+        <!--Button-->
+        <Button x:Name="Generator" Content="Generate" Margin="0,72,95,0" VerticalAlignment="Top"
+        	HorizontalAlignment="Right" Click="GenerateOutputOnClick" />
+        <Button Name="CopyToClipboard" Content="Clipboard" Margin="0,72,10,0" VerticalAlignment="Top"
+                HorizontalAlignment="Right" Click="CopyToClipboardOnClick" />
+
+        <!--Label-->
+        <Label Content="Lenght, Count:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" />
+        <Label Content="Data Type:" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" />
+        <Label Content="Output:" HorizontalAlignment="Left" Margin="10,106,0,0" VerticalAlignment="Top" />
     </Grid>
 </controls:MetroWindow>
