--- a/TestDataGenerator/MainWindow.xaml
+++ b/TestDataGenerator/MainWindow.xaml
@@ -2,6 +2,7 @@
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
                       Title="Test Data Generator" Width="500" Height="350"
                       GlowBrush="{DynamicResource AccentColorBrush}"
                       Icon="b.ico" ResizeMode="CanMinimize" TitleCharacterCasing="Normal">
@@ -11,13 +12,7 @@
             <!--  Settings  -->
             <Button Click="ToggleSettingsFlyoutClick">
                 <StackPanel Orientation="Horizontal">
-                    <Rectangle Width="20" Height="20"
-                               Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}">
-                        <Rectangle.OpacityMask>
-                            <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_settings}" />
-                        </Rectangle.OpacityMask>
-                    </Rectangle>
-
+                    <iconPacks:PackIconMaterial Kind="Settings" Width="20" Height="20" HorizontalAlignment="Center" VerticalAlignment="Center" />
                     <TextBlock Margin="5 0 0 0" VerticalAlignment="Center" Text="settings" />
                 </StackPanel>
             </Button>
@@ -53,7 +48,7 @@
                 Click="CopyToClipboardOnClick" Content="Clipboard" />
 
         <!--  Label  -->
-        <Label Margin="10,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Content="Lenght, Count:" />
+        <Label Margin="10,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Content="Length, Count:" />
         <Label Margin="10,41,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Content="Data Type:" />
         <Label Margin="10,106,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Content="Output:" />
     </Grid>
@@ -80,18 +75,14 @@
                     <StackPanel Margin="10,5,0,0" Orientation="Horizontal">
                         <Button Name="SaveStyle" Width="165" Margin="60,5,0,0" Click="SaveStyleClick">
                             <StackPanel Orientation="Horizontal">
-                                <Rectangle Width="16" Height="16" Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}">
-                                    <Rectangle.OpacityMask>
-                                        <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_save}" />
-                                    </Rectangle.OpacityMask>
-                                </Rectangle>
+                                <iconPacks:PackIconMaterial Kind="ContentSaveSettings" Width="20" Height="20" HorizontalAlignment="Center" VerticalAlignment="Center" />
                                 <TextBlock Margin="5,0,0,0" VerticalAlignment="Center" Text="save style" />
                             </StackPanel>
                         </Button>
                     </StackPanel>
                     <!-- Horizontal Line -->
-                    <StackPanel Margin="0,10,0,0" Orientation="Vertical">
-                        <Rectangle Width="220" VerticalAlignment="Stretch" Stroke="{DynamicResource AccentColorBrush}" />
+                    <StackPanel Margin="10,10,10,0" Orientation="Vertical">
+                        <Separator Background="{DynamicResource AccentColorBrush}" />
                     </StackPanel>
                     <!-- Build / Linker Time -->
                     <StackPanel Orientation="Horizontal">
