--- a/TestDataGenerator.Avalonia/Views/MainWindow.axaml
+++ b/TestDataGenerator.Avalonia/Views/MainWindow.axaml
@@ -7,7 +7,6 @@
         mc:Ignorable="d"
 		Icon="/Assets/b.ico"
 		Title="TestDataGenerator"
-        xmlns:ui="using:FluentAvalonia.UI.Controls"
 		TransparencyLevelHint="Mica"
 		Background="Transparent">
 
@@ -34,14 +33,14 @@
 		<Panel Name="MainPanel" Margin="0,0,0,0">
 			<Panel Name="ContentPanel" Margin="0,0,0,0">
 
-				<Grid Margin="10" ColumnDefinitions="107,*,90,90" RowDefinitions="37,37,37,*">
+				<Grid Margin="10" ColumnDefinitions="107,*,93,93" RowDefinitions="37,37,37,*">
 					<!-- Length Count -->
 					<Label Grid.Column="0" Grid.Row="0" Height="30" Content="Length / Count:"/>
 					<NumericUpDown Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="3" Height="30" Value="{Binding TestDataLength}" Minimum="1" FormatString="#" />
 
 					<!-- Data Type -->
 					<Label Grid.Column="0" Grid.Row="1" Height="30" Content="Data Type:"/>
-					<ui:FAComboBox Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="3" Height="30" ItemsSource="{Binding TestDataTypeCollection}" SelectedItem="{Binding TestDataType}" HorizontalAlignment="Stretch"/>
+					<ComboBox Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="3" Height="30" ItemsSource="{Binding TestDataTypeCollection}" SelectedItem="{Binding TestDataType}" HorizontalAlignment="Stretch"/>
 
 					<!-- Generate -->
 					<Button Grid.Column="2" Grid.Row="2" Height="30" Width="90" Command="{Binding CopyToClipboardCommand}" HorizontalContentAlignment="Center" Name="CopyToClipboard" Content="Clipboard" />
@@ -56,6 +55,5 @@
 			</Panel>
 		</Panel>
 	</Panel>
-
 
 </Window>
