--- a/TestDataGenerator.Avalonia/Views/MainWindow.axaml
+++ b/TestDataGenerator.Avalonia/Views/MainWindow.axaml
@@ -6,9 +6,7 @@
         d:DesignWidth="500" d:DesignHeight="350" Width="500" Height="350"
         mc:Ignorable="d"
         Icon="/Assets/b.ico"
-        Title="TestDataGenerator"
-        TransparencyLevelHint="Mica"
-        Background="Transparent">
+        Title="TestDataGenerator">
 
     <Panel Name="RootPanel">
         <ExperimentalAcrylicBorder IsHitTestVisible="False" Name="AcrylicBorder">
